src/content/docs/sdk/ios/v4/features/deep-links/direct-ja.mdx
---
title: ダイレクトディープリンクの設定
description: アプリのダイレクトディープリンクを設定します。
slug: ja/sdk/ios/v4/features/deep-links/direct
sidebar-position: 3
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /ja/sdk/ios/features/deep-links/direct
---

ディープリンクは、Adjustダッシュボードで設定した後にアプリで設定できます。 **ダイレクトディープリンク** は、ユーザーがアプリをデバイスにインストールしている場合に使用されます。このリンクは、ユーザーをアプリ内の特定のページに誘導します。

ディープリンクを有効化するには、以下を行う必要があります。

-  [ ] Associated Domainsをアプリに対して有効にすること。
-  [ ] Xcodeでディープリンクを設定すること。

## Enable Associated Domains {#enable-associated-domains}

最初に、Apple Developer AccountでAssociated Domainsを有効にする必要があります。これにより、アプリでユニバーサルリンクドメインを設定できるようになります。これを行うには、以下の手順に従ってください。

1. [Apple Developer Account](https://developer.apple.com/account/)にログインします。
2. 左側のメニューで **証明書、ID、プロフィール（Certificates, IDs & Profiles）** を選択します。
3. 左側のメニューで **ID（Identifiers）** を選択します。
4. アプリを探して選択し、編集ページを開きます。
5. **機能（Capabilities）** で、 **Associated Domains** にチェックマークが付いていることを確認します。
6. **保存（Save）** を選択して変更内容を保存します。

## Configure deep links in Xcode {#configure-deep-links-in-xcode}

次の手順に従って、ディープリンク設定をXcodeプロジェクトに追加します。

### Adjust universal links domain {#adjust-universal-links-domain}

1. Xcodeでアプリプロジェクトを開きます。
2. 左側のメニューからプロジェクトを選択します。
3. **ターゲット（Targets）** でアプリを選択します。
4. 上部のメニューから **署名と機能（Signing & Capabilities）** を選択します。
5. 下のサブメニューで **全て（All）** が選択されていることを確認します。
6. 追加（Add）オプション（ **\+** ）を選択して、機能を追加します。
7. **Associated Domains** を選択します。
8. プレフィックスapplinksを含むAdjustユニバーサルリンクドメインを入力します： `applinks:`
   -  `example.adj.st`を使用する場合、`applinks:example.adj.st`のようになります。

### Custom URL scheme {#custom-url-scheme}

<Callout type="tip">

アプリ用のカスタムURLスキームが必要かどうかをマーケティングチームに確認し、スキーム名をどのようにするかを決定してください。Androidデバイスをターゲットとするアプリの場合は、各プラットフォームで同じスキーム名を使用してください。

</Callout>

1. Xcodeでアプリプロジェクトを開きます。
2. 左側のメニューからプロジェクトを選択します。
3. **ターゲット（Targets）** でアプリを選択します。
4. 上部のメニューから **情報（Info）** を選択します。
5. **URLタイプ（URL Types）** セクションを展開します。
6. 追加（Add）オプション（ **\+** ）を選択してURLタイプを追加します。
7. 次の情報を入力してURLスキームを作成します。
   -  **識別子** ： `$(PRODUCT_BUNDLE_IDENTIFIER)`
   -  **URLスキーム（URL Schemes）** ：カスタムURLスキーム。これは一意のものである必要があります。`http`、`https`、`mailto`などの保護されたスキームは使用しないでください。
   -  **権限（Role）** ：編集者（Editor）

このスキームは、本番用ビルド **および** デバッグビルドで機能します。

## Modify your iOS app {#modify-your-ios-app}

さまざまなディープリンクシナリオを設定するために、iOSアプリを更新する必要があります。アプリの更新方法は、アプリで[シーン](https://developer.apple.com/documentation/uikit/app_and_environment/scenes)を使用するかどうかによって異なります。

### App doesn't use scenes {#app-doesn-t-use-scenes}

アプリでシーンを使用しない場合、アプリデリゲートのメソッドを更新する必要があります。

#### Universal links {#universal-links}

Adjust SDKの次のメソッドを呼び出すために、アプリデリゲートの`application(_:continue:restorationHandler:)`メソッドを更新します：

-  `ADJLinkResolution.resolveLink`: Call this method only if your marketing team requires the use of Adjust's Link Resolution solution. If the deep link uses a domain that matches an element in the `resolveUrlSuffixArray`, then the method attempts to resolve the deep link, and returns the resolved link. If the deep link doesn't match an element in this array, then the method passes through the original deep link, so you can pass all deep links to this method.
-  `Adjust.appWillOpen` このメソッドを呼び出し、Adjustサーバーにディープリンクを送信して情報を記録します。AdjustのディープリンクとAdjust以外のディープリンクの両方をこのメソッドにパスすることができます。Adjustサーバーは、Adjustパラメーターを持たないディープリンクを計測しません。

ユーザーがユニバーサルリンクをクリックすると、iOSでアプリが開き、ディープリンクが`application(_:continue:restorationHandler:)`に配信されます。これは、ユーザーがアプリを閉じていても、バックグラウンドで実行していても発生します。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func application(
    _ application: UIApplication,
    continue userActivity: NSUserActivity,
    restorationHandler: @escaping ([UIUserActivityRestoring]?) -> Void)
    -> Bool {

    if userActivity.activityType == NSUserActivityTypeBrowsingWeb {
        let incomingURL = userActivity.webpageURL

        // call the below method to resolve deep link
        ADJLinkResolution.resolveLink(
        withUrl: incomingURL,
        resolveUrlSuffixArray: ["email.example.com", "short.example.com"],
        callback: { resolvedURL in
            // add your code below to handle deep link
            // (for example, open deep link content)
            // resolvedURL object contains the deep link


            // call the below method to send deep link to Adjust's servers
            Adjust.appWillOpen(resolvedURL)
        })
      } else {
          return false
      }

      return true
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
- (BOOL)application:(UIApplication *)application
    continueUserActivity:(NSUserActivity *)userActivity
    restorationHandler:
    (void (^)(NSArray *restorableObjects))restorationHandler {

    if ([[userActivity activityType]
        isEqualToString:NSUserActivityTypeBrowsingWeb]) {
        NSURL *incomingURL = [userActivity webpageURL];

        // call the below method to resolve deep link
        [ADJLinkResolution
        resolveLinkWithUrl:incomingURL
        resolveUrlSuffixArray:@[
        @"email.example.com", @"short.example.com"
        ]
        callback:^(NSURL* _Nullable resolvedURL) {
            // add your code below to handle deep link
            // (for example, open deep link content)
            // resolvedURL object contains the deep link


            // call the below method to send deep link to Adjust's servers
            [Adjust appWillOpenUrl:resolvedURL];
        }];
    } else {
        return NO;
    }

    return YES;
}
```

</Tab>
</Tabs>

#### Custom URL scheme {#custom-url-scheme-1}

カスタムURLスキームのディープリンクを設定することをマーケティングチームから求められた場合、アプリデリゲートの`application(_:open:options:)`メソッドを更新して、Adjust SDKの`Adjust.appWillOpen`メソッドを呼び出します。このメソッドは、ディープリンクをAdjustサーバーに送信し、記録します。AdjustのディープリンクとAdjust以外のディープリンクの両方をこのメソッドにパスすることができます。Adjustサーバーは、Adjustパラメーターを持たないディープリンクを計測しません。

ユーザーがカスタムURLスキームのディープリンクをクリックすると、iOSでアプリが開き、ディープリンクが`application(_:open:options:)`に配信されます。これは、ユーザーがアプリを閉じていても、バックグラウンドで実行していても発生します。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func application(
    _ app: UIApplication,
    open incomingURL: URL,
    options: [UIApplication.OpenURLOptionsKey: Any] = [:]
    ) -> Bool {

    // add your code below to handle deep link
    // (for example, open deep link content)
    // incomingURL object contains the deep link


    // call the below method to send deep link to Adjust's servers
    Adjust.appWillOpen(incomingURL)

    return true
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
- (BOOL)application:(UIApplication *)app
    openURL:(NSURL *)incomingURL
    options:(NSDictionary *)options {

    // add your code below to handle deep link
    // (for example, open deep link content)
    // incomingURL object contains the deep link


    // call the below method to send deep link to Adjust's servers
    [Adjust appWillOpenUrl:incomingURL];

    return YES;
}
```

</Tab>
</Tabs>

### App uses scenes {#app-uses-scenes}

アプリでシーンを使用する場合、シーンデリゲートのメソッドを更新する必要があります。

#### Universal links {#universal-links-1}

1. シーンデリゲートの`scene(_:willConnectTo:options:)`メソッドを更新します。アプリを閉じている状態でユーザーがユニバーサルリンクをクリックすると、iOSでアプリが開き、このメソッドへのディープリンクが配信されます。
2. シーンデリゲートの`scene(_:continue:)`メソッドを更新します。バックグラウンドでアプリを実行している状態でユーザーがユニバーサルリンクをクリックすると、iOSでアプリが開き、このメソッドへのディープリンクが配信されます。

上記のメソッドにより、Adjust SDKの次のメソッドが呼び出されます。

-  `ADJLinkResolution.resolveLink`: Call this method only if your marketing team requires the use of Adjust's Link Resolution solution. If the deep link uses a domain that matches an element in the `resolveUrlSuffixArray`, then the method attempts to resolve the deep link, and returns the resolved link. If the deep link doesn't match an element in this array, then the method passes through the original deep link, so you can pass all deep links to this method.
-  `Adjust.appWillOpen` \- このメソッドを呼び出し、Adjustサーバーにディープリンクを送信してそれらを記録します。AdjustのディープリンクとAdjust以外のディープリンクの両方をこのメソッドにパスすることができます。Adjustサーバーは、Adjustパラメーターを持たないディープリンクを計測しません。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func scene(
    _ scene: UIScene,
    willConnectTo session: UISceneSession,
    options connectionOptions: UIScene.ConnectionOptions
    ) {

    guard let userActivity = connectionOptions.userActivities.first,
      userActivity.activityType == NSUserActivityTypeBrowsingWeb,
      let incomingURL = userActivity.webpageURL
    else { return }

    // call the below method to resolve deep link
    ADJLinkResolution.resolveLink(
      withUrl: incomingURL,
      resolveUrlSuffixArray: ["email.example.com", "short.example.com"],
      callback: { resolvedURL in
        // add your code below to handle deep link
        // (for example, open deep link content)
        // resolvedURL object contains the deep link


        // call the below method to send deep link to Adjust's servers
        Adjust.appWillOpen(resolvedURL)
      })
}

func scene(
    _ scene: UIScene,
    continue userActivity: NSUserActivity) {

    if userActivity.activityType == NSUserActivityTypeBrowsingWeb {
        let incomingURL = userActivity.webpageURL

        // call the below method to resolve deep link
        ADJLinkResolution.resolveLink(
        withUrl: incomingURL,
        resolveUrlSuffixArray: ["email.example.com", "short.example.com"],
        callback: { resolvedURL in
            // add your code below to handle deep link
            // (for example, open deep link content)
            // resolvedURL object contains the deep link


            // call the below method to send deep link to Adjust's servers
            Adjust.appWillOpen(resolvedURL)
        })
    }
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
- (void)scene:(UIScene *)scene willConnectToSession:(UISceneSession *)session
    options:(UISceneConnectionOptions *)connectionOptions {

    NSUserActivity* userActivity =
    [[[connectionOptions userActivities] allObjects] firstObject];

    if ([[userActivity activityType]
        isEqualToString:NSUserActivityTypeBrowsingWeb]) {
        NSURL *incomingURL = [userActivity webpageURL];

        // call the below method to resolve deep link
        [ADJLinkResolution
        resolveLinkWithUrl:incomingURL
        resolveUrlSuffixArray:@[
        @"email.example.com", @"short.example.com"
        ]
        callback:^(NSURL* _Nullable resolvedURL) {
            // add your code below to handle deep link
            // (for example, open deep link content)
            // resolvedURL object contains the deep link


            // call the below method to send deep link to Adjust's servers
            [Adjust appWillOpenUrl:resolvedURL];
        }];
    }
}

- (void)scene:(UIScene *)scene continueUserActivity:(NSUserActivity *)userActivity{
    if ([[userActivity activityType]
        isEqualToString:NSUserActivityTypeBrowsingWeb]) {
        NSURL *incomingURL = [userActivity webpageURL];

        // call the below method to resolve deep link
        [ADJLinkResolution
        resolveLinkWithUrl:incomingURL
        resolveUrlSuffixArray:@[
        @"email.example.com", @"short.example.com"
        ]
        callback:^(NSURL* _Nullable resolvedURL) {
            // add your code below to handle deep link
            // (for example, open deep link content)
            // resolvedURL object contains the deep link


            // call the below method to send deep link to Adjust's servers
            [Adjust appWillOpenUrl:resolvedURL];
        }];
    }
}
```

</Tab>
</Tabs>

#### Custom URL scheme {#custom-url-scheme-2}

1. シーンデリゲートの`scene(_:willConnectTo:options:)`メソッドを更新します。アプリを閉じている状態でユーザーがカスタムURLスキームのディープリンクをクリックすると、iOSでアプリが開き、このメソッドへのディープリンクが配信されます。
2. シーンデリゲートの`scene(_:openURLContexts:)`メソッドを更新します。バックグラウンドでアプリを実行している状態でユーザーがカスタムURLスキームのディープリンクをクリックすると、iOSでアプリが開き、このメソッドへのディープリンクが配信されます。

これらのメソッドは、Adjust SDKで`Adjust.appWillOpen`メソッドを呼び出します。このメソッドは、ディープリンクをAdjustサーバーに送信し、記録します。AdjustのディープリンクとAdjust以外のディープリンクの両方をこのメソッドにパスすることができます。Adjustサーバーは、Adjustパラメーターを持たないディープリンクを計測しません。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func scene(
    _ scene: UIScene,
    openURLContexts URLContexts: Set<uiopenurlcontext>
    ) {

    guard let incomingURL = URLContexts.first?.url else {
        return
    }

    // add your code below to handle deep link
    // (for example, open deep link content)
    // incomingURL object contains the deep link


    // call the below method to send deep link to Adjust's servers
    Adjust.appWillOpen(incomingURL)
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
- (void)scene:(UIScene *)scene
    openURLContexts:(nonnull NSSet<uiopenurlcontext *> *)URLContexts {

    NSURL *incomingURL = [[URLContexts allObjects] firstObject].URL;

    if (incomingURL) {
        // add your code below to handle deep link
        // (for example, open deep link content)
        // incomingURL object contains the deep link


        // call the below method to send deep link to Adjust's servers
        [Adjust appWillOpenUrl:incomingURL];
    }
}
```

</Tab>
</Tabs>
